# CG_myObjLoader

./: CMakeLists.txt  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Program.cpp  Program.h  README.md  additional_structs.h  glad.c  main.cpp  tiny_obj_loader.h
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
